# PGA_PRACTICE

./: BgWindow.cpp  BgWindow.h  CMakeLists.txt  FragmentShader.h  GUI.cpp  GUI.h  GUIElement.h  Listener.cpp  Listener.h  Logger.cpp  Logger.h  LoggerWindow.cpp  LoggerWindow.h  ManagerGUI.cpp  ManagerGUI.h  README.md  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderLoaderWindow.cpp  ShaderLoaderWindow.h  ShaderProgram.cpp  ShaderProgram.h  VertexShader.h  conandata.yml  imgui.ini  main.cpp
GLAD/include/glad/: glad.h
GLAD/src/: glad.c
IMGUI/include/: imgui.h
LODEPNG/src/: lodepng.cpp
resources/shaders/: pag03-fs.glsl  pag03-vs.glsl  pag06-vs.glsl  pag07-fs.glsl  pag07-vs.glsl  pag08-fs.glsl  pag08-vs.glsl  pag09-fs.glsl  pag10-fs.glsl  pag10-vs.glsl  shadow-fs.glsl  shadow-vs.glsl
resources/uml/: diagrama_prac10_pag.uxf  diagrama_prac4_pag.uxf  diagrama_prac5_pag.uxf  diagrama_prac6_pag.uxf  diagrama_prac7_pag.uxf  diagrama_prac8_pag.uxf  diagrama_prac9_pag.uxf
source/: main.cpp
source/camera/: Camera.cpp  Camera.h
source/gui/: BgWindow.cpp  BgWindow.h  CameraWindow.cpp  CameraWindow.h  GUIElement.h  LightManager.cpp  LightManager.h  LoggerWindow.cpp  LoggerWindow.h  ManagerGUI.cpp  ManagerGUI.h  MaterialEditingWindow.cpp  MaterialEditingWindow.h  ModelLoaderWindow.cpp  ModelLoaderWindow.h  ModelManager.cpp  ModelManager.h  ModelTransformationWindow.cpp  ModelTransformationWindow.h  RenderModeWindow.cpp  RenderModeWindow.h  ShaderLoaderWindow.cpp  ShaderLoaderWindow.h
source/light/: AmbientLightApplicator.h  DirectionalLightApplicator.h  Light.cpp  Light.h  LightApplicator.h  LightProperties.cpp  LightProperties.h  PointLightApplicator.h  SpotLightApplicator.h
source/model/: Material.cpp  Material.h  Model.cpp  Model.h  Texture.cpp  Texture.h
source/rendering/: Renderer.cpp  Renderer.h
source/shader/: FragmentShader.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  VertexShader.h
source/utils/: Listener.cpp  Listener.h  Logger.cpp  Logger.h  Types.h
